luci-theme-material: fix font size bug
fix "textarea font-size too big in firefox"

--- a/themes/luci-theme-material/htdocs/luci-static/material/css/style.css
+++ b/themes/luci-theme-material/htdocs/luci-static/material/css/style.css
@@ -683,17 +683,18 @@ td > table > tbody > tr > td {
 .cbi-input-textarea {
     box-sizing: border-box;
     width: 100%;
-    min-height: 15rem;
+    min-height: 16rem;
     padding: 1rem;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: black;
 }
 
 #syslog {
-    width: 90%;
-    width: calc(100% - 2rem);
+    width: 100%;
     min-height: 15rem;
     padding: 1rem;
-    font-size: 1rem;
+    font-size: smaller;
     color: #5F5F5F;
 
     margin-bottom: 20px;
@@ -1101,6 +1102,10 @@ body.lang_pl.node-main-login .cbi-value-title{
 
     fieldset {
         padding: 1rem;
+    }
+
+    .cbi-input-textarea{
+        font-size: smaller;
     }
 }
 
